* finish dbs statement pdf extraction

--- a/Pages/Oofy.html
+++ b/Pages/Oofy.html
@@ -40,7 +40,7 @@
                 maxFilesize: 20, // MB
                 maxFiles: 3,
                 dictDefaultMessage: 'Drag an image here to upload, or click to select one',
-                uploadMultiple: true,
+                uploadMultiple: false,
                 autoProcessQueue: true,
                 headers: {
                     //'x-csrf-token': document.querySelectorAll('meta[name=csrf-token]')[0].getAttributeNode('content').value,
